package de.hebk;

public class Game {


    int index_frage;
    Fragen fragen;

    String currency;

}
